--- a/KursWpf/PageUsers.xaml
+++ b/KursWpf/PageUsers.xaml
@@ -12,7 +12,7 @@
     <Grid Background="#FF282B3A">
         <Label Content="ВСЕ ИГРОКИ НА СЕРВЕРЕ" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" FontSize="24" Foreground="#FFB8A8A8" Height="42" Width="414" />
 
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,52,0,0">
             <ItemsControl x:Name="AccountList" Background="{x:Null}" Margin="0,52,0,0" BorderThickness="0"  >
             <ItemsControl.ItemTemplate >
                 <DataTemplate>
