--- a/KursWpf/PageStatus.xaml
+++ b/KursWpf/PageStatus.xaml
@@ -16,7 +16,7 @@
 
 
         <Button Content="Запустить" Style="{StaticResource ButtonStyle}" Margin="21,583,0,0"  Click="ButtonStart_Click"  />
-        <Button Content="Остановить" Style="{StaticResource ButtonStyle}" Margin="172,583,0,0" />
+        <Button Content="Остановить" Style="{StaticResource ButtonStyle}" Margin="172,583,0,0" Click="ButtonStop_Click" />
         <Button Content="Перезагрузить" Style="{StaticResource ButtonStyle}" Margin="322,583,0,0" />
         <Label Content="Память (ОЗУ)" HorizontalAlignment="Left" Margin="62,66,0,0" VerticalAlignment="Top" Foreground="#FFF9F5F5" FontSize="18"/>
         <Label Content="Количество игроков на сервере: 341" HorizontalAlignment="Left" Margin="50,385,0,0" VerticalAlignment="Top" Foreground="#FFFFF6F6" FontSize="14"/>
